# atom

./: .gitattributes  .gitignore  .gitlab-ci.yml  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.claude/skills/code-comments/: SKILL.md
.claude/skills/grilling/: SKILL.md
.claude/skills/post-merge/: SKILL.md
.github/workflows/: harness.yml
docs/: checklist.md  context-notes.md  design.md
meta/: pyproject.toml
meta/harness/answer_first_reminder/: __init__.py  __main__.py  reminder.py
meta/harness/answer_first_reminder/tests/: __init__.py  test_reminder.py
meta/harness/commit_guard/: __init__.py  __main__.py  guard.py
meta/harness/commit_guard/tests/: __init__.py  test_guard.py
meta/harness/issue_duplicate_guard/: __init__.py  __main__.py  guard.py
meta/harness/issue_duplicate_guard/tests/: __init__.py  test_guard.py  test_guard_gitlab.py
meta/harness/rules_checker/: __init__.py  __main__.py  check_rules.py
meta/harness/rules_checker/tests/: __init__.py  test_check_rules.py
meta/infra/gitlab/: README.md  compose.yaml  run.sh  seed.sh  smoke.sh  verify_ci.sh
meta/rules/: README.md  answer-first-reminder.md  answer-first.md  coding-discipline.md  commit-discipline.md  commit-guard.md  docstring-standards.md  file-header-comments.md  goal-verification.md  grilling.md  issue-duplicate-guard.md  issue-workflow.md  korean-output.md  plan-deviation.md  python-stack.md  rule-deployment.md
meta/templates/: CLAUDE.template.md
